# kececinumbers

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONJECTURE.md  CONTRIBUTING.md  MANIFEST.in  README.md  conda_build_config.yaml  meta.yaml  noxfile.py  package.json  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci-cd.yml  ci.yml  codecov.yaml  codeql.yml  conda-publish.yml  pixi.yml  python-package.yml  python-publish.yml  python_ci.yml  run-tests.yml  static.yml  workflow.yml  zenodo.yml  zizmor.yml
docs/: Makefile  changelog.rst  citation.rst  conf.py  conjecture.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: kececinumbers.rst
examples/: kececinumbres.ipynb
kececinumbers/: __init__.py  _version.py  kececinumbers.py  zeta.txt
kececinumbers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recipe/: meta.yaml
tests/: test_helpers.py  test_sample.py
