# pyproject.toml

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kececinumbers"
version = "1.0.6"
license = {text = "GPL-3.0-or-later"}

# Diğer proje bilgileri (isteğe bağlı ama tavsiye edilir)
authors = [
    { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "Keçeci Numbers: An Exploration of a Dynamic Sequence Across Diverse Number Sets"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Ana bağımlılıklarınız
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "sympy",
    "requests",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "ruff", "numpy", "matplotlib", "scipy", "scikit-learn", "sympy", "pillow", "requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["kececinumbers*"]
exclude = ["binder", "build*", "content", "data", "dist", "dist*", "docs", "docs*", "examples*", "examples", "notebooks", "tests", "tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
kececinumbers = ["*.py", "*.pyi", "py.typed"]

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/kececinumbers"
Repository = "https://github.com/WhiteSymmetry/kececinumbers"
